--- a/src/scss/components/_modifiers.scss
+++ b/src/scss/components/_modifiers.scss
@@ -64,7 +64,9 @@
       color: #666;
     }
   }
-}ing */
+}
+
+/* Characteristic modifiers styling */
 .characteristic {
   &-modifiers {
     display: flex;
