--- a/templates/actor/parts/actor-features.hbs
+++ b/templates/actor/parts/actor-features.hbs
@@ -1,4 +1,4 @@
-{{!-- Template utilisé pour les capacités, voies, arts et domaines --}}
+{{!-- Template utilisé pour les traits, voies, arts et domaines --}}
 <div class="item-header flexrow">
   <div class="item-image">
     <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
