--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -29,9 +29,9 @@
         <div class="resource flex-group-center health-resource">
           <label class="resource-label">{{localize "MYRIAD_SYSTEM.Usage.costTypes.health"}}</label>
           <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.health.value" value="{{#if calculatedHealth}}{{calculatedHealth.value}}{{else}}{{system.health.value}}{{/if}}" data-dtype="Number" />
+            <input type="text" name="system.health.value" value="{{system.health.value}}" data-dtype="Number" />
             <span class="sep">/</span>
-            <input type="text" name="system.health.max" value="{{#if calculatedHealth}}{{calculatedHealth.max}}{{else}}{{system.health.max}}{{/if}}" data-dtype="Number" />
+            <span class="health-max">{{system.health.max}}</span>
           </div>
         </div>
         
@@ -39,9 +39,15 @@
         <div class="resource flex-group-center xp-resource">
           <label class="resource-label">{{localize "MYRIAD_SYSTEM.XP.label"}}</label>
           <div class="resource-content flexrow flex-center flex-between">
-            <span class="xp-unspent">{{#if calculatedXP}}{{calculatedXP.unspent}}{{else}}{{system.xp.unspent}}{{/if}}</span>
+            <button type="button" class="xp-control xp-decrease" data-action="decrease-xp" title="Decrease Total XP">
+              <i class="fas fa-minus"></i>
+            </button>
+            <span class="xp-unspent">{{system.xp.unspent}}</span>
             <span class="sep">/</span>
-            <span class="xp-total">{{#if calculatedXP}}{{calculatedXP.earned}}{{else}}{{system.xp.earned}}{{/if}}</span>
+            <span class="xp-total">{{system.xp.earned}}</span>
+            <button type="button" class="xp-control xp-increase" data-action="increase-xp" title="Increase Total XP">
+              <i class="fas fa-plus"></i>
+            </button>
           </div>
         </div>
 
@@ -64,7 +70,7 @@
   {{!-- Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="characteristics">{{localize "MYRIAD_SYSTEM.SheetLabels.Characteristics"}}</a>
-    <a class="item" data-tab="features">{{localize "MYRIAD_SYSTEM.SheetLabels.Competences"}}</a>
+    <a class="item" data-tab="competences">{{localize "MYRIAD_SYSTEM.SheetLabels.Competences"}}</a>
     <a class="item" data-tab="magic">{{localize "MYRIAD_SYSTEM.SheetLabels.Magic"}}</a>
     <a class="item" data-tab="inventory">{{localize "MYRIAD_SYSTEM.SheetLabels.Inventory"}}</a>
     <a class="item" data-tab="biography">{{localize "Biography"}}</a>
@@ -83,6 +89,9 @@
             <div class="characteristic-content">
               <input type="text" name="system.characteristics.puissance.value"
                 value="{{system.characteristics.puissance.value}}" data-dtype="Number" />
+              <button type="button" class="characteristic-roll" data-characteristic="puissance" title="Roll Puissance">
+                <i class="fas fa-dice-d20"></i>
+              </button>
               <div class="characteristic-modifiers">
                 {{#if system.characteristics.puissance.bonus}}
                 <span class="characteristic-bonus">+{{system.characteristics.puissance.bonus}}</span>
@@ -98,6 +107,9 @@
             <div class="characteristic-content">
               <input type="text" name="system.characteristics.coordination.value"
                 value="{{system.characteristics.coordination.value}}" data-dtype="Number" />
+              <button type="button" class="characteristic-roll" data-characteristic="coordination" title="Roll Coordination">
+                <i class="fas fa-dice-d20"></i>
+              </button>
               <div class="characteristic-modifiers">
                 {{#if system.characteristics.coordination.bonus}}
                 <span class="characteristic-bonus">+{{system.characteristics.coordination.bonus}}</span>
@@ -121,6 +133,9 @@
             <div class="characteristic-content">
               <input type="text" name="system.characteristics.ingeniosite.value"
                 value="{{system.characteristics.ingeniosite.value}}" data-dtype="Number" />
+              <button type="button" class="characteristic-roll" data-characteristic="ingeniosite" title="Roll Ingéniosité">
+                <i class="fas fa-dice-d20"></i>
+              </button>
               <div class="characteristic-modifiers">
                 {{#if system.characteristics.ingeniosite.bonus}}
                 <span class="characteristic-bonus">+{{system.characteristics.ingeniosite.bonus}}</span>
@@ -136,6 +151,9 @@
             <div class="characteristic-content">
               <input type="text" name="system.characteristics.perspicacite.value"
                 value="{{system.characteristics.perspicacite.value}}" data-dtype="Number" />
+              <button type="button" class="characteristic-roll" data-characteristic="perspicacite" title="Roll Perspicacité">
+                <i class="fas fa-dice-d20"></i>
+              </button>
               <div class="characteristic-modifiers">
                 {{#if system.characteristics.perspicacite.bonus}}
                 <span class="characteristic-bonus">+{{system.characteristics.perspicacite.bonus}}</span>
@@ -152,7 +170,8 @@
     </div>
 
     {{!-- Compétences Tab --}}
-    <div class="tab features" data-group="primary" data-tab="features">
+    {{!-- Compétences et Traits --}}
+    <div class="tab competences" data-group="primary" data-tab="competences">
       {{!-- Voies --}}
       <div class="voies">
         <header class="items-header flexrow">
@@ -201,7 +220,7 @@
         </ol>
       </div>
       
-      {{!-- Liste des Compétences --}}
+      {{!-- Liste des Compétences et Traits (fusionnés) --}}
       <div class="competences">
         <header class="items-header flexrow">
           <h3 class="item-name">{{localize "MYRIAD_SYSTEM.ItemType.competence"}}</h3>
@@ -251,22 +270,44 @@
             </div>
           </li>
           {{/each}}
-        </ol>
-      </div>
-
-      {{!-- Autres Capacités --}}
-      <div class="features">
-        <header class="items-header flexrow">
-          <h3 class="item-name">{{localize "MYRIAD_SYSTEM.ItemType.feature"}}</h3>
-          <div class="item-controls">
-            <a class="item-control item-create" title="Create Feature" data-type="feature"><i
-                class="fas fa-plus"></i></a>
-          </div>
-        </header>
-        <ol class="items-list">
           {{#each features as |item id|}}
           <li class="item flexrow" data-item-id="{{item._id}}">
-            {{> "systems/myriad-system/templates/actor/parts/actor-features.hbs"}}
+            <div class="item-name">
+              <div class="item-image">
+                <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+              </div>
+              <h4>{{item.name}}</h4>
+            </div>
+            <div class="item-grade">
+              {{#if item.system.isUnique}}
+                {{localize "MYRIAD_SYSTEM.Competence.Unique"}}
+              {{else}}
+                {{localize "MYRIAD_SYSTEM.Grade.label"}}: 
+                {{#if item.system.grade}}
+                  <span class="grade-value">
+                  {{#if (eq (toNumber item.system.grade) 1)}}
+                    {{localize "MYRIAD_SYSTEM.Grade.I"}}
+                  {{else if (eq (toNumber item.system.grade) 2)}}
+                    {{localize "MYRIAD_SYSTEM.Grade.II"}}
+                  {{else if (eq (toNumber item.system.grade) 3)}}
+                    {{localize "MYRIAD_SYSTEM.Grade.III"}}
+                  {{else if (eq (toNumber item.system.grade) 4)}}
+                    {{localize "MYRIAD_SYSTEM.Grade.IV"}}
+                  {{else if (eq (toNumber item.system.grade) 5)}}
+                    {{localize "MYRIAD_SYSTEM.Grade.V"}}
+                  {{else}}
+                    {{localize "MYRIAD_SYSTEM.Grade.I"}}
+                  {{/if}}
+                  </span>
+                {{else}}
+                  <span class="grade-value">{{localize "MYRIAD_SYSTEM.Grade.I"}}</span>
+                {{/if}}
+              {{/if}}
+            </div>
+            <div class="item-controls">
+              <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+            </div>
           </li>
           {{/each}}
         </ol>
