--- a/src/scss/myriad-system.scss
+++ b/src/scss/myriad-system.scss
@@ -19,6 +19,7 @@
 @import 'components/resource';
 @import 'components/characteristics';
 @import 'components/modifiers';
+@import 'components/features';
 
 /* Styles spécifiques au système Myriad */
 .myriad-system.sheet.actor {
