--- a/templates/item/item-competence-sheet.hbs
+++ b/templates/item/item-competence-sheet.hbs
@@ -26,37 +26,104 @@
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       {{!-- Competence-specific attributes --}}
       <div class="form-group">
-        <label>{{localize "MYRIAD_SYSTEM.ItemAttributes.Level"}}</label>
+        <label>{{localize "MYRIAD_SYSTEM.ItemAttributes.Grade"}}</label>
         <div class="form-fields">
-          <div class="item-level">
-            {{#times system.level.max}}
-            <i class="fas {{#if (lte this system.level.value)}}fa-circle{{else}}fa-circle-o{{/if}}"></i>
+          <div class="item-grade">
+            {{#times 5}}
+            <i class="fas {{#if (lte this system.grade)}}fa-circle{{else}}fa-circle-o{{/if}}"></i>
             {{/times}}
           </div>
-          <input type="range" name="system.level.value" value="{{system.level.value}}" min="1" max="{{system.level.max}}" data-dtype="Number"/>
+          <input type="range" name="system.grade" value="{{system.grade}}" min="1" max="5" data-dtype="Number"/>
         </div>
       </div>
 
       <div class="form-group">
-        <label>{{localize "MYRIAD_SYSTEM.ItemAttributes.Characteristic"}}</label>
+        <label>{{localize "MYRIAD_SYSTEM.ItemAttributes.XPCost"}}</label>
         <div class="form-fields">
-          <select name="system.characteristic">
-            {{#select system.characteristic}}
-            <option value="">{{localize "None"}}</option>
-            <option value="puissance">{{localize config.characteristics.puissance}}</option>
-            <option value="coordination">{{localize config.characteristics.coordination}}</option>
-            <option value="ingeniosite">{{localize config.characteristics.ingeniosite}}</option>
-            <option value="perspicacite">{{localize config.characteristics.perspicacite}}</option>
+          <input type="number" name="system.xpCost" value="{{system.xpCost}}" data-dtype="Number"/>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>{{localize "MYRIAD_SYSTEM.ItemAttributes.IsPassive"}}</label>
+        <div class="form-fields">
+          <input type="checkbox" name="system.isPassive" {{checked system.isPassive}}/>
+        </div>
+      </div>
+      
+      {{!-- Tags --}}
+      <div class="form-group">
+        <label>{{localize "MYRIAD_SYSTEM.ItemAttributes.Tags"}}</label>
+        <div class="form-fields">
+          <input type="text" name="system.tags" value="{{system.tags}}" data-dtype="String"/>
+          <p class="hint">{{localize "MYRIAD_SYSTEM.ItemAttributes.TagsHint"}}</p>
+        </div>
+      </div>
+      
+      {{!-- Benefits --}}
+      <div class="form-group stacked">
+        <label>{{localize "MYRIAD_SYSTEM.ItemAttributes.Benefits"}}</label>
+        <a class="add-benefit" title="{{localize 'Add Benefit'}}"><i class="fas fa-plus"></i></a>
+        <ol class="benefits-list">
+          {{#each system.benefits as |benefit i|}}
+          <li class="benefit">
+            <input type="text" name="system.benefits.{{i}}" value="{{benefit}}" />
+            <a class="delete-benefit" data-index="{{i}}" title="{{localize 'Delete'}}"><i class="fas fa-trash"></i></a>
+          </li>
+          {{/each}}
+        </ol>
+      </div>
+      
+      {{!-- Drawbacks --}}
+      <div class="form-group stacked">
+        <label>{{localize "MYRIAD_SYSTEM.ItemAttributes.Drawbacks"}}</label>
+        <a class="add-drawback" title="{{localize 'Add Drawback'}}"><i class="fas fa-plus"></i></a>
+        <ol class="drawbacks-list">
+          {{#each system.drawbacks as |drawback i|}}
+          <li class="drawback">
+            <input type="text" name="system.drawbacks.{{i}}" value="{{drawback}}" />
+            <a class="delete-drawback" data-index="{{i}}" title="{{localize 'Delete'}}"><i class="fas fa-trash"></i></a>
+          </li>
+          {{/each}}
+        </ol>
+      </div>
+      
+      {{!-- Acquisition --}}
+      <h3>{{localize "MYRIAD_SYSTEM.ItemAttributes.Acquisition"}}</h3>
+      
+      <div class="form-group">
+        <label>{{localize "MYRIAD_SYSTEM.Acquisition.xpCost"}}</label>
+        <div class="form-fields">
+          <input type="number" name="system.acquisition.xpCost" value="{{system.acquisition.xpCost}}" data-dtype="Number"/>
+        </div>
+      </div>
+      
+      <div class="form-group">
+        <label>{{localize "MYRIAD_SYSTEM.Acquisition.price"}}</label>
+        <div class="form-fields">
+          <input type="number" name="system.acquisition.price.value" value="{{system.acquisition.price.value}}" data-dtype="Number"/>
+          <select name="system.acquisition.price.currency">
+            {{#select system.acquisition.price.currency}}
+            <option value="po">{{localize "MYRIAD_SYSTEM.Acquisition.currencies.po"}}</option>
+            <option value="pa">{{localize "MYRIAD_SYSTEM.Acquisition.currencies.pa"}}</option>
+            <option value="pc">{{localize "MYRIAD_SYSTEM.Acquisition.currencies.pc"}}</option>
             {{/select}}
           </select>
         </div>
       </div>
-
-      <div class="form-group">
-        <label>{{localize "MYRIAD_SYSTEM.ItemAttributes.IsUnique"}}</label>
-        <div class="form-fields">
-          <input type="checkbox" name="system.isUnique" {{checked system.isUnique}}/>
-        </div>
+      
+      {{!-- Prerequisites --}}
+      <div class="form-group stacked">
+        <label>{{localize "MYRIAD_SYSTEM.Acquisition.prerequisites"}}</label>
+        <a class="add-prerequisite" title="{{localize 'Add Prerequisite'}}"><i class="fas fa-plus"></i></a>
+        <ol class="prerequisites-list">
+          {{#each system.acquisition.prerequisites as |prerequisite i|}}
+          <li class="prerequisite">
+            <input type="text" name="system.acquisition.prerequisites.{{i}}" value="{{prerequisite}}" />
+            <a class="delete-prerequisite" data-index="{{i}}" title="{{localize 'Delete'}}"><i class="fas fa-trash"></i></a>
+          </li>
+          {{/each}}
+        </ol>
       </div>
     </div>
 
